--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:15
+    image: postgres:14
     environment:
       POSTGRES_DB: dms
       POSTGRES_USER: user
@@ -39,7 +39,7 @@ services:
       context: .
       dockerfile: backend/Dockerfile
     environment:
-      DATABASE_URL: "postgresql://user:password@db:5432/dms"
+      DATABASE_URL: "postgresql://postgres:worldwide@db:5432/dms"
       S3_ENDPOINT: "http://minio:9000"
       JWT_ACCESS_SECRET: "your-super-secret-jwt-access-key-here-make-it-very-long-and-random"
       S3_ACCESS_KEY: "minioadmin"
