--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "test:api": "vitest run --config backend/vitest.config.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate --schema=./backend/prisma/schema.prisma",
+    "db:push": "prisma db push --schema=./backend/prisma/schema.prisma",
+    "db:migrate": "prisma migrate dev --schema=./backend/prisma/schema.prisma",
+    "postinstall": "prisma generate --schema=./backend/prisma/schema.prisma",
     "db:seed": "tsx backend/prisma/seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.478.0",
     "@aws-sdk/s3-request-presigner": "^3.478.0",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^6.15.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -79,12 +80,12 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
-    "prisma": "^5.7.1",
+    "prisma": "^6.15.0",
     "supertest": "^6.3.3",
     "tailwindcss": "^3.3.6",
     "tsx": "^4.6.2",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "vitest": "^1.0.4"
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4"
   }
 }
