Merchant Registration Screen + Backend API + SMTP Email Service

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,14 @@ S3_REGION="us-east-1"
 # Frontend API URL
 VITE_API_URL="http://localhost:8080/api"
 
+# SMTP Configuration
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_SECURE="false"
+SMTP_USER="your-email@gmail.com"
+SMTP_PASS="your-app-password"
+SMTP_FROM="noreply@dms.com"
+
 # Environment
 NODE_ENV="development"
 FRONTEND_URL="http://localhost:5173"
