--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,8 @@ VITE_API_URL="http://localhost:8080/api"
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="587"
 SMTP_SECURE="false"
-SMTP_USER="your-email@gmail.com"
-SMTP_PASS="your-app-password"
+SMTP_USER="japillai@gmail.com"
+SMTP_PASS="Pranav2005#"
 SMTP_FROM="noreply@dms.com"
 
 # Environment
