--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="587"
 SMTP_SECURE="false"
 SMTP_USER="japillai@gmail.com"
-SMTP_PASS="Pranav2005#"
+SMTP_PASS="kvgx npgj yzyl usgr"
 SMTP_FROM="noreply@dms.com"
 
 # Environment
