--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
+    "express-rate-limit": "^8.1.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
@@ -90,7 +91,7 @@
     "supertest": "^6.3.3",
     "tailwindcss": "^3.3.6",
     "tsx": "^4.6.2",
-    "typescript": "^5.2.2",
+    "typescript": "^5.9.2",
     "vite": "^7.1.3",
     "vitest": "^3.2.4"
   }
